@@ -29,9 +29,12 @@
 #  include <config.h>
 #endif /* HAVE_CONFIG_H */
 
+#include <errno.h>
 #include <munge.h>
 #include <openssl/rand.h>
 #include <string.h>
+#include <sys/stat.h>
+#include <unistd.h>
 #include "conf.h"
 #include "crypto_log.h"
 #include "log.h"
@@ -48,34 +51,78 @@
 #endif /* !RANDOM_SEED_DEFAULT */
 
 
-void
+int
 random_init (const char *seed)
 {
+    struct stat stat;
     int n = 0;
+    int rc = 0;
 
+    /*  FIXME: Check parent dirs of [seed] to ensure they have appropriate
+     *    ownership and permissions.
+     */
     if (seed != NULL) {
-        /*
-         *  FIXME: Ignore seed file if it does not have sane permissions.
-         */
-        if ((n = RAND_load_file (seed, RANDOM_SEED_BYTES)) > 0) {
+        if ((access (seed, R_OK | W_OK) < 0) && (errno != ENOENT)) {
+            log_msg (LOG_WARNING,
+                "Ignoring PRNG seed \"%s\": %s", seed, strerror (errno));
+            rc = -1;
+        }
+        else if (errno == ENOENT) {
+            ; /* A missing seed is not considered an error. */
+        }
+        else if (lstat (seed, &stat) < 0) {
+            log_msg (LOG_WARNING, "Unable to stat PRNG seed \"%s\": %s",
+                seed, strerror (errno));
+            rc = -1;
+        }
+        else if (!S_ISREG (stat.st_mode)) {
+            log_msg (LOG_WARNING,
+                "Ignoring PRNG seed \"%s\": Not a regular file", seed);
+            rc = -1;
+        }
+        else if ((stat.st_uid != 0) && (stat.st_uid != geteuid ())) {
+            log_msg (LOG_WARNING,
+                "Ignoring PRNG seed \"%s\": Owned by uid=%d",
+                seed, stat.st_uid);
+            rc = -1;
+        }
+        else if (stat.st_mode & S_IWOTH) {
+            log_msg (LOG_WARNING,
+                "Ignoring PRNG seed \"%s\": World-writable", seed);
+            rc = -1;
+        }
+        else if (stat.st_mode & S_IROTH) {
+            log_msg (LOG_WARNING,
+                "Ignoring PRNG seed \"%s\": World-readable", seed);
+            rc = -1;
+        }
+        else if ((n = RAND_load_file (seed, RANDOM_SEED_BYTES)) > 0) {
             log_msg (LOG_INFO, "PRNG seeded with %d bytes from \"%s\"",
                 n, seed);
         }
     }
     if (n < RANDOM_SEED_BYTES) {
-        log_msg (LOG_NOTICE, "PRNG seeding in progress ...");
+        log_msg (LOG_INFO, "PRNG seeding from \"%s\" in progress ...",
+            RANDOM_SEED_DEFAULT);
         if ((n = RAND_load_file (RANDOM_SEED_DEFAULT, RANDOM_SEED_BYTES)) >0) {
             log_msg (LOG_INFO, "PRNG seeded with %d bytes from \"%s\"",
                 n, RANDOM_SEED_DEFAULT);
         }
     }
+    else {
+        rc = 1;
+    }
     if (n < RANDOM_SEED_BYTES) {
-        log_msg (LOG_WARNING, "Unable to seed PRNG with adequte entropy.");
         if (!conf->got_force) {
-            exit (EMUNGE_SNAFU);
+            log_err (EMUNGE_SNAFU, LOG_ERR,
+                    "Unable to seed PRNG with sufficient entropy");
+        }
+        else {
+            log_msg (LOG_WARNING,
+                    "Unable to seed PRNG with sufficient entropy");
         }
     }
-    return;
+    return (rc);
 }
 
 
